--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ django-allauth = "^0.45.0"
 django-crispy-forms = "^1.12.0"
 django-debug-toolbar = "^3.2.2"
 whitenoise = "^5.3.0"
+django-environ = "^0.5.0"
 
 [tool.poetry.dev-dependencies]
 
